# core-search

./: .core-launchpad-trigger  README.md  bubble-map.html  core-search-mode.js  core-wiki-main.js  core.html  index.html  materialize-core-launchpad.py  taxonomy.js  wiki.css
.core-launchpad-manifest/: bundle01.jsonl  bundle02.jsonl  bundle03.jsonl  bundle04.jsonl  bundle05.jsonl  part00.json  part13.json  part14.json  part15.json  part16.json  part17.json  part18.json  part19.json  part20.json  part21.json  part22.json  part23.json  part24.json  part25.json
.devcontainer/: devcontainer.json
.github/workflows/: import-core-galleries.yml  install-core-launchpad-branch.yml  install-uploaded-core-search.yml  remove-cannibalcore.yml  unpack-core-launchpad.yml
.sync-upload/: chunk00.txt  chunk01.txt  chunk02.txt  chunk03.txt  chunk04.txt  chunk05a.hex  chunk05b.hex
assets/cores/: manifest.json
core-launchpad/: .env.example  .gitignore  .upload-marker  Anchor.toml  BUILD_REPORT.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package.json
core-launchpad/docs/: ARCHITECTURE.md  DEPLOYMENT.md  RUNBOOK.md  SECURITY.md
core-launchpad/programs/core-launchpad/: Cargo.toml
core-launchpad/programs/core-launchpad/src/: constants.rs  contexts.rs  error.rs  lib.rs  math.rs  state.rs
core-launchpad/programs/core-launchpad/src/instructions/: config.rs  launch.rs  mod.rs  utils.rs
ui/: app.js  article.js  core-data.js  graph-data.js  graph-fix.css  graph-nav.js  graph-v2.js  graph.css  graph.js  quiz.css  quiz.js  shell.js  views.js
(+19 files in other folders)
