[package]
name = "core-launchpad"
version = "0.1.0"
description = "SOL bonding curve that graduates into a CORE/token Raydium pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "core_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token", "token"] }
